[package]
name        = "qvnt-i"
version     = "0.4.4"
description = "Advanced quantum computation simulator."
keywords    = ["theoretical", "quantum-computing", "quantum-simulator", "quantum", "qubits"]
categories  = ["concurrency", "simulation", "mathematics", "science"]

authors     = ["Denis Drozhzhin <denisdrozhzhin1999@gmail.com>"]
edition     = "2018"
repository  = "https://github.com/MucTepDayH16/qvnt-i/"
readme      = "README.md"
license     = "GPL-3.0-or-later"

[dependencies]
clap        = { version = "3.1.8", features = ["derive"] }
rustyline   = "9.1.2"
qvnt        = { git = "https://github.com/MucTepDayH16/qvnt.git", features = ["multi-thread", "interpreter"] }
meval       = "0.2.0"
anyhow      = "1.0.66"
home        = "0.5.4"