[package]
name        = "qvnt-i"
version     = "0.4.4"
description = "Advanced quantum computation simulator."
keywords    = ["theoretical", "quantum-computing", "quantum-simulator", "quantum", "qubits"]
categories  = ["concurrency", "simulation", "mathematics", "science"]

authors     = ["Denis Drozhzhin <denisdrozhzhin1999@gmail.com>"]
edition     = "2018"
repository  = "https://github.com/MucTepDayH16/qvnt-i/"
readme      = "README.md"
license     = "GPL-3.0-or-later"

[dependencies]
clap        = { version = "4.1.8", features = ["derive"] }
rustyline   = "11.0.0"
qvnt        = { version = "0.4.4", features = ["multi-thread", "interpreter"] }
meval       = "0.2.0"
home        = "0.5.4"
log         = "0.4.17"
env_logger  = { version = "0.10.0", optional = true }
termtree    = "0.4.0"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"

[features]
default     = []
tracing     = ["env_logger"]
